Completed the navigation bar; solved auth bugs
