# backend/ProjectOpenDebate/api.py
@@ -1,5 +1,6 @@
+from django.contrib.auth import get_user_model
 from django.middleware.csrf import get_token
-from ninja import Router, Schema
+from ninja import Router, Schema, ModelSchema
 
 # Initialize Ninja API
 router = Router()
@@ -11,6 +12,15 @@ class CSRFTokenSchema(Schema):
 class AuthenticatedResponse(Schema):
     is_authenticated: bool
 
+class CurrentUserResponse(ModelSchema):
+    # We need to explicitly define these fields as they are @property methods on the User model
+    # and therefore wont be included in the ModelSchema by default.
+    is_authenticated: bool
+    is_anonymous: bool
+
+    class Config:
+        model = get_user_model()
+        model_exclude = ['password']
 
 # API Endpoints
 @router.get("/set-csrf-token", response=CSRFTokenSchema)
@@ -24,3 +34,10 @@ def is_authenticated(request):
     Returns True if authenticated, False otherwise.
     """
     return AuthenticatedResponse(is_authenticated=request.user.is_authenticated)
+
+@router.get("get-current-user-object", response=CurrentUserResponse, auth=None)
+def get_current_user_object(request):
+    """
+    Get the current user object no matter if authenticated or not.
+    """
+    return request.user
